[gd_scene load_steps=2 format=3 uid="uid://d00kq2aoxk1s5"]

[ext_resource type="Script" path="res://Component/UI/HUD.gd" id="1_yxarq"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 1
script = ExtResource("1_yxarq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Skills" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="SkillsPanel" type="HBoxContainer" parent="MarginContainer/Skills"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 2

[node name="DashSkill" type="ProgressBar" parent="MarginContainer/Skills/SkillsPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
fill_mode = 3

[node name="Label" type="Label" parent="MarginContainer/Skills/SkillsPanel/DashSkill"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "DASH"
horizontal_alignment = 1
vertical_alignment = 3

[node name="DashTimer" type="Timer" parent="MarginContainer/Skills/SkillsPanel/DashSkill"]
one_shot = true

[node name="PlayerInfo" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="LifeLabel" type="Label" parent="MarginContainer/PlayerInfo"]
layout_mode = 0
offset_left = 189.0
offset_right = 235.0
offset_bottom = 20.0
text = "LIFE : "

[node name="LifeAmount" type="Label" parent="MarginContainer/PlayerInfo"]
layout_mode = 0
offset_left = 236.0
offset_right = 276.0
offset_bottom = 20.0
text = "9999"
horizontal_alignment = 1

[connection signal="timeout" from="MarginContainer/Skills/SkillsPanel/DashSkill/DashTimer" to="." method="_on_dash_timer_timeout"]
